# nmexec

./: .gitattributes  .gitignore  deb_build.sh  nmexec.conf  nmexec.service  pyproject.toml  rpm_build.sh
.github/workflows/: build.yml
debian/: changelog  control  install  postinst  postrm  prerm  rules
rpm/: nmexec.spec
src/nmexec/: __main__.py
yoloModels/yolov9-c/: alias.txt
yoloModels/yolov9-c-seg/: alias.txt  weights.pt
yoloModels/yolov9-e/: alias.txt
yoloModels/yolov9-m/: alias.txt  names.yaml  yolov9-m.pt
yoloModels/yolov9-m-carplate/: alias.txt  names.yaml  yolov9-m-carplate.pt
yoloModels/yolov9-m-etrange-corps-seau-blanc/: alias.txt  names.yaml  weights.pt
yoloModels/yolov9-m-fire-smoke/: alias.txt  names.yaml  weights.pt
yoloModels/yolov9-m-gasleak/: alias.txt  names.yaml  yolov9-m-gasleak.pt
yoloModels/yolov9-m-hardhat/: alias.txt  names.yaml  yolov9-m-hardhat.pt
yoloModels/yolov9-s/: alias.txt  weights.pt
