[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmexec"
version = "1.0.5"
description = "Network Model Executor Allows to process data over the network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil",
    "opencv-python",
    "yolo9>=1.0.10"
]

[project.scripts]
nmexec = "nmexec.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*"]
