[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmexec"
version = "1.0.17"
description = "Network Model Executor Allows to process data over the network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools<82",
    "psutil",
    "opencv-python",
    "yolo9>=1.0.13",
    "tensorboard",
    "Pillow<=9.5.0",
    "numpy<2.0",
    "albumentations<1.4.0",
]

[project.scripts]
nmexec = "nmexec.__main__:main"
yolo9_train_dual = "nmexec.__main__:train_dual"
yolo9_detect = "nmexec.__main__:detect"
yolo9_val_dual = "nmexec.__main__:val_dual"


[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*"]
